# fragrancetrack

./: .gitignore  README.md  main.py  main.sh  pyproject.toml  requirements.txt  temp.html
.nicegui/: storage-user-742fb8b4-119a-4a9f-b405-3ac55c126621.json  storage-user-e953114e-69bd-4205-a0a3-d70d22ab0eda.json
db/backup/: 2025-12-12_tracker_db.json  archive_tracker_db.json
docs/: website.py
src/: algolia.py  database.py  fragrance.py  fragrantica.py  notes.py  testing.py
test/: cleanup.py  test_algolia.py  test_database.py  test_fragrance.py  test_fragrantica.py
website/: index.html
